@@ -46,7 +46,9 @@ common_sources = \
 	ui-certificate.cc		ui-certificate.h		\
 	ui-properties.cc		ui-properties.h			\
 	gtk_image_animation.cc	gtk_image_animation.h 	\
-	ui-popup.cc				ui-popup.h
+	ui-popup.cc				ui-popup.h				\
+	\
+	eggtrayicon.c			eggtrayicon.h
 
 
 ## In case of compilation problem, just comment next lines
